--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ This site can be used as a Refgenie data channel
 
 <p>
 Add this data channel by executing the following command:
-<code>refgenie data_channel add channel_name https <span id="current-url"></span>/index.yaml</code>
+<code>refgenie data_channel add channel_name https <span id="current-url"></span>index.yaml</code>
 </p>
 
 <script>
