--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       
       <!-- Footer -->
       <div class="border-t border-gray-100 py-6 px-8 text-center">
-        <p class="text-gray-500">&copy; <span id="current-year"></span> | <a href="https://github.com/refgenie/refgenie" class="text-blue-600 hover:underline">Refgenie on GitHub</a></p>
+        <p class="text-gray-500"><span id="current-year"></span> | <a href="https://github.com/refgenie/refgenie" class="text-blue-600 hover:underline">Refgenie on GitHub</a></p>
       </div>
     </div>
   </div>
