--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Refgenie Recipes & Asset Classes</title>
+  <title>Refgenie Data Channel</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
   <style>
     :root {
@@ -38,13 +38,13 @@
         <div class="w-64 mb-4 md:mb-0 md:mr-8">
           <img src="./assets/refgenie-logo.svg" alt="Refgenie Logo" class="max-w-full h-auto">
         </div>
-        <h1 class="text-3xl font-bold text-white text-center md:text-left">Refgenie Recipes & Asset Classes</h1>
+        <h1 class="text-3xl font-bold text-white text-center md:text-left">Refgenie Data Channel</h1>
       </div>
     </header>
     
     <main class="container mx-auto px-4 md:px-8 py-8">
       <p class="text-lg text-gray-700 mb-10">
-        This site can be used as a Refgenie data channel for managing genomic assets.
+        This site can be used as a Refgenie data channel -- source of asset classes and recipes.
       </p>
       
       <div class="bg-white border border-gray-200 rounded-lg p-6 mb-10 shadow-sm">
