--- a/index.html
+++ b/index.html
@@ -46,12 +46,25 @@
       
       <div class="bg-white border border-gray-200 rounded-lg p-6 mb-10 shadow-sm">
         <h2 class="text-xl font-semibold refgenie-green-text mb-4">
-          Connect to this data channel
+          1. Connect
         </h2>
         <p class="mb-6 text-gray-600">Add this data channel by executing the following command:</p>
         <div class="relative">
           <pre id="command-box" class="command-bg text-gray-200 p-6 rounded-lg font-mono text-sm overflow-x-auto"><code>refgenie data_channel add channel_name https <span id="current-url"></span>index.yaml</code></pre>
-          <button onclick="copyToClipboard()" class="absolute top-3 right-3 refgenie-green hover:bg-opacity-90 text-white py-2 px-4 rounded-md transition duration-200 text-sm">
+          <button onclick="copyToClipboard()" class="absolute top-3 right-3 refgenie-green hover:bg-opacity-90 text-white py-2 px-4 rounded-md transition duration-100 text-sm">
+            Copy
+          </button>
+        </div>
+        <p id="copy-confirm" class="text-green-600 mt-3 font-medium hidden">
+          Command copied to clipboard
+        </p>
+        <h2 class="text-xl font-semibold refgenie-green-text mb-4">
+          2. Sync
+        </h2>
+        <p class="mb-6 text-gray-600">Add all asset classet and recipes published by this data channel by executing the following command:</p>
+        <div class="relative">
+          <pre id="command-box" class="command-bg text-gray-200 p-6 rounded-lg font-mono text-sm overflow-x-auto"><code>refgenie data_channel sync channel_name</code></pre>
+          <button onclick="copyToClipboard()" class="absolute top-3 right-3 refgenie-green hover:bg-opacity-90 text-white py-2 px-4 rounded-md transition duration-100 text-sm">
             Copy
           </button>
         </div>
