--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p id="copy-confirm" class="text-green-600 mt-3 font-medium hidden">
           Command copied to clipboard
         </p>
-        <h2 class="text-xl font-semibold refgenie-green-text mb-4">
+        <h2 class="text-xl font-semibold refgenie-green-text mt-8 mb-4">
           2. Sync
         </h2>
         <p class="mb-6 text-gray-600">Add all asset classet and recipes published by this data channel by executing the following command:</p>
