--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
       <p class="text-lg text-gray-700 mb-10">
         This site can be used as a Refgenie data channel -- source of asset classes and recipes.
       </p>
-      <p class="text-gray-600 mb-4">
-        To learn more about the asset classes and recipes offered by this data channel, view the <a href="<span id='current-url'></span>index.yaml" class="text-refgenie-green hover:underline inline-flex items-center"><span>index.yaml</span><i class="fas fa-external-link-alt ml-2"></i></a> file.
-      </p>
 
       <!-- Explanation for the index.yaml file with link icon -->
       <div class="bg-white border border-gray-200 rounded-lg p-6 mb-10 shadow-sm">
@@ -69,6 +66,12 @@
           <button onclick="copyToClipboard('command-box-2', 'copy-btn-2')" id="copy-btn-2" class="absolute top-3 right-3 refgenie-green hover:bg-opacity-90 text-white py-2 px-4 rounded-md transition duration-100 text-sm">
             Copy
           </button>
+        </div>
+        <!-- Link and explanation to index.yaml -->
+        <div class="mt-6">
+          <p class="text-gray-600 mb-4">
+            To learn more about the asset classes and recipes offered by this data channel, view the <a href="<span id='current-url'></span>index.yaml" class="text-refgenie-green hover:underline inline-flex items-center"><span>index.yaml</span><i class="fas fa-external-link-alt ml-2"></i></a> file.
+          </p>
         </div>
       </div>
 
