--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Refgenie Data Channel</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script> <!-- Add Font Awesome for the icon -->
-  <style>
+<!--   <style>
     :root {
       --refgenie-green: #337a5f;
       --refgenie-light-green: #e6f2ee;
@@ -30,7 +30,8 @@
     .command-bg {
       background-color: #2d3748;
     }
-  </style>
+  </style> -->
+  <link href="./assets/css/main.css" rel="stylesheet">
 </head>
 <body>
   <div class="w-full">
