--- a/index.html
+++ b/index.html
@@ -5,32 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Refgenie Data Channel</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script> <!-- Add Font Awesome for the icon -->
-<!--   <style>
-    :root {
-      --refgenie-green: #337a5f;
-      --refgenie-light-green: #e6f2ee;
-    }
-    body {
-      background-color: #f9fafb;
-      min-height: 100vh;
-    }
-    .refgenie-green {
-      background-color: var(--refgenie-green);
-    }
-    .refgenie-green-text {
-      color: var(--refgenie-green);
-    }
-    .refgenie-light-bg {
-      background-color: var(--refgenie-light-green);
-    }
-    .refgenie-border {
-      border-color: var(--refgenie-green);
-    }
-    .command-bg {
-      background-color: #2d3748;
-    }
-  </style> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
   <link href="./assets/css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -99,8 +74,5 @@
       </div>
     </footer>
   </div>
-
-  <!-- Link to external JS file -->
-  <script src="./assets/js/main.js"></script>
 </body>
 </html>
