--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- Link and explanation to index.yaml -->
         <div class="mt-6">
           <p class="text-gray-600 mb-4">
-            To learn more about the asset classes and recipes offered by this data channel, view the <a href="<span id='current-url'></span>index.yaml" class="text-refgenie-green hover:underline inline-flex items-center"><span>index.yaml</span><i class="fas fa-external-link-alt ml-2"></i></a> file.
+            To learn more about the asset classes and recipes offered by this data channel, view the <a href="<span id='current-url'></span>index.yaml" class="refgenie-green-text hover:underline"><span>index.yaml</span><i class="fas fa-external-link-alt ml-2"></i></a> file.
           </p>
         </div>
       </div>
@@ -70,7 +70,7 @@
     
     <footer class="border-t border-gray-200 mt-10 py-6 px-4 md:px-8">
       <div class="container mx-auto">
-        <p class="text-gray-500 text-center md:text-left">&copy; <span id="current-year"></span> | <a href="https://github.com/refgenie/refgenie" class="refgenie-green-text hover:underline">Refgenie on GitHub</a></p>
+        <p class="text-gray-500 text-center md:text-left"><a href="https://github.com/refgenie/refgenie" class="refgenie-green-text hover:underline">Refgenie on GitHub<i class="fas fa-external-link-alt ml-2"></i></a></p>
       </div>
     </footer>
   </div>
