--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Refgenie Data Channel</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
-  <script src="./assets/js/main.js"></script>
   <link href="./assets/css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -75,5 +74,6 @@
       </div>
     </footer>
   </div>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
