--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
       </div>
     </footer>
   </div>
-  <script src="/assets/js/main.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
